tests/errors/E004.zen
bool main() {
    return 0;        /// Error 004: Return type mismatch in function 'main'
}